Archive/e8b660cd14e6f4f6ad9de41bac5702e1-61c3814520a8d4318f681038dc4b4da7/output
main.cpp:6:26: error: ISO C++ forbids declaration of 'operator=' with no type [-fpermissive]
  operator=(MyClass& other);       // Assignment
                          ^
main.cpp:7:32: error: ISO C++ forbids declaration of 'operator=' with no type [-fpermissive]
  operator=(const MyClass& other); // Assignment
                                ^
main.cpp:10:1: error: expected ';' after class definition
 }
 ^
